# aoc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc_2021/day01/: part1.py  part2.py
aoc_2021/day02/: part1.py  part2.py
aoc_2021/day03/: part1.py  part2.py
aoc_2021/day04/: part1.py  part2.py
aoc_2021/day05/: part1.py  part2.py
aoc_2021/day06/: part1.py  part2.py
aoc_2021/day07/: part1.py  part2.py
aoc_2021/day08/: part1.py  part2.py
aoc_2022/day00/: partXX.py
aoc_2022/day01/: part1.py  part2.py
aoc_2022/day02/: part1.py  part2.py
aoc_2022/day03/: part1.py  part2.py
aoc_2022/day04/: part1.py  part2.py
aoc_2022/day05/: part1.py  part2.py
aoc_2022/day06/: part1.py  part2.py
aoc_2022/day07/: part1.py  part2.py
aoc_2022/day08/: part1.py  part2.py
aoc_2022/day09/: part1.py  part2.py
aoc_2022/day10/: part1.py  part2.py
aoc_2022/day11/: part1.py  part2.py
aoc_2022/day12/: part1.py  part2.py
aoc_2022/day13/: part1.py  part2.py
aoc_2022/day14/: part1.py  part2.py
aoc_2022/day15/: part1.py
aoc_2024/day00/: partXX.py
aoc_2024/day01/: part1.py  part2.py
aoc_2024/day02/: part1.py  part2.py
aoc_2024/day03/: part1.py  part2.py
aoc_2024/day04/: part1.py  part2.py
aoc_2024/day05/: part1.py  part2.py
aoc_2024/day06/: part1.py  part2.py
aoc_2024/day07/: part1.py  part2.py
aoc_2024/day08/: part1.py  part2.py
aoc_2024/day09/: part1.py  part2.py
aoc_2024/day10/: part1.py  part2.py
aoc_2024/day11/: part1.py  part2.py
aoc_2025/day01/: part1.py  part2.py
aoc_2025/day02/: part1.py  part2.py
aoc_2025/day03/: part1.py  part2.py
aoc_2025/day04/: part1.py  part2.py
aoc_2025/day05/: part1.py  part2.py
aoc_2025/day06/: part1.py  part2.py
aoc_2025/day07/: part1.py  part2.py
aoc_2025/day08/: part1.py  part2.py
aoc_2025/day09/: part1.py  part2.py
aoc_2025/day10/: part1.py  part2.py
aoc_2025/day11/: part1.py  part2.py
aoc_2025/day12/: part1.py
src/aoc_utils/: __init__.py
