[project]
name = "aoc-utils"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "requests",
]
description = ""

[project.scripts]
aoc-download = "aoc_utils:download_input"
aoc-submit = "aoc_utils:submit_solution"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    # Using git version as 0.991 does not support typing.Self properly.
    # The next version should support it as it was merged the day after 0.991 was released
    # Use MYPY_USE_MYPYC=1 when pip installing so it compiles with mypyc
    "mypy @ git+https://github.com/python/mypy.git",
    "types-requests",
    "flake8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# So that git version works for mypy
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
files = [
    "src/",
]
ignore_missing_imports = true
strict = true


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
